--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "vuetify": "^2.3.14"
+        "vuetify": "^2.3.14",
+        "vuex": "^3.5.1"
     }
 }
